# AutoDJIPilotPlugin

./: .gitignore  CMakeLists.txt  README.md
inc/: PayloadPluginExample.h
src/: PayloadPluginExample.cpp
